# Crypto-Trading-Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile.lambda-inference  Makefile  pyproject.toml
configs/: model_config.yaml  trading_config.yaml
infra/: cdk.json  package-lock.json  package.json
infra/lib/: common-stack.ts  data-stack.ts  ecr-stack.ts  trading-stack.ts
notebooks/: 01_data_exploration.ipynb  04_backtest_analysis.ipynb
scripts/: download_data.py
src/backtest/: __init__.py  engine.py  metrics.py  report.py  walk_forward.py
src/data/: collector.py  features.py  preprocessor.py  sentiment.py
src/infra/lambda_handlers/: data_collector.py  inference.py
src/models/: ensemble.py  lstm_model.py  trainer.py  xgboost_model.py
src/strategy/: __init__.py  portfolio.py  regime.py  risk.py
tests/unit/: test_backtest_engine.py  test_backtest_metrics.py  test_backtest_report.py  test_collector.py  test_ensemble.py  test_features.py  test_lstm_model.py  test_portfolio.py  test_preprocessor.py  test_regime.py  test_risk_manager.py  test_sentiment.py  test_trainer.py  test_walk_forward.py  test_xgboost_model.py
