[project]
name = "cryptosentinel"
version = "0.1.0"
description = "AI-Powered Crypto Trading Bot & Analytics Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "BlueNode" }]

dependencies = [
    # Data Collection
    "ccxt>=4.0",
    "python-binance>=1.0",
    "websockets>=12.0",

    # Data Processing
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "scipy>=1.12",

    # Technical Indicators
    "ta>=0.11",

    # ML / Deep Learning
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "optuna>=3.5",

    # LLM / Sentiment
    "transformers>=4.38",
    "boto3>=1.34",

    # Visualization
    "streamlit>=1.31",
    "plotly>=5.18",

    # Utils
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "tqdm>=4.66",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "ipykernel>=6.29",
    "jupyterlab>=4.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
